# cg2019

./: 1.cpp  planets.cpp  triangles.cpp
Projeto Quarto/: README.md
Projeto Quarto/Projeto CG/: CMakeCache.txt  CMakeLists.txt  Makefile  Projeto_CG  Projeto_CG.cbp  cmake_install.cmake  includes.h  main.cpp  qtlayoutexample.cbp  texture.cpp
